# SpecHarvester

./: .gitignore  AGENTS.md  Package.swift  README.md  pyproject.toml
.flow/: params.yaml
.github/: CODEOWNERS
SPECS/: PRD.md  README.md  Workplan.md
docs/: ACCEPTED_CANDIDATE_DIFF_REPORTS.md  ACCEPTED_CANDIDATE_IMPACT_CLASSIFICATION_REPORTS.md  ACCEPTED_MANIFEST_ENTRIES.md  ACCEPTED_PACKAGE_UPDATE_LIFECYCLE.md  ACCEPTED_PACKAGE_UPDATE_PROPOSALS.md  AI_DRAFT_BLOCKER_BOUNDED_RERUN_GATE.md  AI_DRAFT_BLOCKER_FOLLOW_UP_PLAN.md  AI_ENRICHMENT_CANDIDATE_PATCH.md  ANALYZER_SANDBOX_REQUIREMENTS.md  ARCHITECTURE.md  ARCHITECTURE_LINT_GUARDRAILS.md  AUTHOR_READY_CALIBRATION_MATRIX.md  AUTHOR_READY_DRAFT_QUALITY_BAR.md  AUTHOR_READY_DRAFT_QUALITY_REPORT.md  AUTONOMOUS_CANDIDATE_BATCH.md  AUTONOMOUS_CANDIDATE_CORPUS_BASELINE.md  AUTONOMOUS_CANDIDATE_CORPUS_QUALITY_GATE.md  AUTONOMOUS_CANDIDATE_INTAKE_POLICY.md  AUTONOMOUS_CANDIDATE_TECH_DEBT_PLAN.md  BASELINE_SUBMISSION_HANDOFF.md  BATCH_COLLECTION.md  BATCH_VALIDATION_REPORTS.md  BOUNDED_CORPUS_EXPANSION_PLAN.md  BOUNDED_POPULAR_LIBRARY_PILOT_AUTHOR_HANDOFF.md  BOUNDED_POPULAR_LIBRARY_PILOT_EXIT_DECISION.md  BOUNDED_POPULAR_LIBRARY_PILOT_OUTPUT_TRIAGE.md  BOUNDED_POPULAR_LIBRARY_PILOT_STATIC_ONLY_RUN.md  BUNDLE_SET_PREFLIGHT.md  CANDIDATE_SOURCE_CLASSIFIER_PLAN.md  CAPABILITIES.md  CODEGRAPH_COMPATIBILITY_GUARD.md  CODEGRAPH_SOURCE_GRAPH_ADAPTER.md  CODEX_SPARK_EXTERNAL_MODEL_ADAPTER_CONTRACT.md  CODE_DUPLICATION_REPORTS.md  CONTROLLED_REPOSITORY_CORPUS_PLAN.md  CORPUS_SELECTION_POLICY.md  (+142 more)
inputs/: repositories.example.yml  (+1 more)
(+1410 files in other folders)
